<?xml version="1.0"?>
<package>
  <name>cp_maps</name>
  <version>0.0.0</version>
  <description>A collection of map files used by the challenge problems</description>
  <maintainer email="todo@todo.todo">TODO</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
